--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>El sitio para el mishi</h1>
+<div style="align-items: center;">
+  <h1>El sitio para el mishi</h1>
+  <img src="./el-mishi.jpg" alt="">
+  <h5>Si me encontraste es por que ando vanganciando sin permiso. Por favor llama a mi mami al numero 3644575388.</h5>
+  <h5>Thaannnksss</h5>
+</div>
