--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
-<div style="align-items: center;">
-  <h1>El sitio para el mishi</h1>
-  <img src="./el-mishi.jpg" alt="">
-  <h5>Si me encontraste es por que ando vanganciando sin permiso. Por favor llama a mi mami al numero 3644575388.</h5>
-  <h5>Thaannnksss</h5>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
+  <link href="https://fonts.cdnfonts.com/css/averta-standard" rel="stylesheet">
+  <title>El mishi</title>
+</head>
+<body>
+  <div class="div-principal">
+    <h1>Hola soy Vagancio el mishi</h1>
+    <img class="foto" src="./el-mishi.jpg" alt="" width="380">
+    <h4>Si me encontraste es por que ando vanganciando sin permiso. Por favor llama a mi mami al numero 3644575388.</h4>
+    <h4>Thaannnksss</h4>  
+</body>
+</html>
 </div>
