Mejorando la vista en mobile.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="div-principal">
     <h1>Hola soy Vagancio el mishi</h1>
-    <img class="foto" src="./el-mishi.jpg" alt="" width="380">
+    <img class="foto" src="./el-mishi.jpg" alt="">
     <h4>Si me encontraste es por que ando vanganciando sin permiso. Por favor llama a mi mami al numero 3644575388.</h4>
     <h4>Thaannnksss</h4>  
 </body>
